k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: radar
  namespace: radar
  labels:
    app.kubernetes.io/name: radar
spec:
  selector:
    app.kubernetes.io/name: radar
  ports:
    - name: http
      port: 80
      targetPort: 8000
